Finished up the site

--- a/wp-content/mu-plugins/pft-core/src/css/main.css
+++ b/wp-content/mu-plugins/pft-core/src/css/main.css
@@ -17,7 +17,7 @@
 }
 
 .general-content > p {
-  @apply text-lg mb-6 leading-relaxed;
+  @apply mb-6 leading-relaxed;
 }
 
 .general-content h2,
@@ -35,11 +35,38 @@
 }
 
 .general-content blockquote > p {
-  @apply text-xl leading-relaxed mb-3;
+  @apply text-lg leading-relaxed mb-3;
 }
 
 .general-content blockquote > cite {
   @apply font-bold not-italic;
+}
+
+.general-content ul {
+  @apply list-disc ml-8 mb-8;
+}
+
+.general-content ol {
+  @apply list-decimal ml-8 mb-8;
+}
+
+.general-content li {
+  @apply mb-4;
+}
+
+.general-content img {
+  @apply w-full;
+}
+
+.general-content .wp-block-image .alignleft,
+.general-content .wp-block-image .alignright {
+  @apply float-none m-0 mb-8;
+}
+
+@screen sm {
+  .general-content blockquote > p {
+    @apply text-xl;
+  }
 }
 
 @screen md {
@@ -53,5 +80,17 @@
 
   .general-content h4 {
     @apply text-xl;
+  }
+
+  .general-content > p {
+    @apply text-lg;
+  }
+
+  .general-content .wp-block-image .alignleft {
+    @apply float-left w-1/2 m-8 ml-0;
+  }
+
+  .general-content .wp-block-image .alignright {
+    @apply float-right w-1/2 m-8 mr-0;
   }
 }
